# K8-LRT

./: .gitattributes  .gitignore  CMakeLists.txt  CreateRelease.ps1  LICENSE  MAKEFILE  README.md  build.ps1
.github/: CODEOWNERS
docs/: QUICKSTART.md
res/: app.rc  manifest.xml
src/: main.c  main.cpp  resource.h  version.h  version.h.in
